# plesk-mcp

./: .gitignore  CHANGELOG.md  README.md  pleskmcp.py  pyproject.toml  server.json
.github/workflows/: ci.yml
local-docs/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
local-docs/src/plesk_local_docs_mcp/: database.py  server.py
local-docs/tests/: test_database.py  test_parse_args.py  test_server.py  test_smoke.py
remote-docs/: CHANGELOG.md  README.md  pyproject.toml
remote-docs/src/plesk_remote_docs_mcp/: server.py
remote-docs/tests/: test_server.py  test_smoke.py
src/plesk_mcp/: server.py  transforms.py
src/plesk_mcp/data/: openapi.json  public
tests/: conftest.py  test_clients.py  test_command.py  test_parse_args.py  test_smoke.py  test_transforms.py  test_upload.py
