[project]
name = "plesk-mcp"
version = "0.1.0"
description = "Plesk MCP server"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Flayed One" }
]
requires-python = ">=3.10"
dependencies = [
    "async-lru",
    "fastmcp>=3",
    "httpx",
]

[dependency-groups]
dev = [
    "mypy",
    "pip",
    "ruff",
]

[tool.uv]
exclude-newer = "7 days"
constraint-dependencies = [
    # requests 2.32 compatibility
    "chardet<6",
]

[tool.ruff]
line-length = 140
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors (not overlapping formatter: E4, E7, E9)
    "W",     # pycodestyle warnings
    "D",     # pydocstyle
    "F",     # Pyflakes
    "I",     # isort (import sorting)

    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "COM",   # flake8-commas
    "DTZ",   # flake8-datetimez
    "EXE",   # flake8-executable
    "ICN",   # flake8-import-conventions
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PL",    # Pylint
    "PT",    # flake8-pytest-style
    "RSE",   # flake8-raise
    "RUF",   # Ruff-specific rules
    "S",     # flake8-bandit
    "T10",   # flake8-debugger
    "UP",    # pyupgrade
]

ignore = [
    "W191", "E111", "E114", "E117", "D206", "D300", "Q", "COM812", "COM819", "ISC002",	# formatter compatibility
    "S101",	 # allow asserts
]

[tool.ruff.lint.isort]
default-section = "first-party"
force-to-top = ["pytest"]
known-third-party = [
    "async_lru",
    "fastmcp",
    "httpx",
    "mcp",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 140

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
quote-style = "preserve"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
sqlite_cache = true

extra_checks = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true

follow_imports = "normal"
ignore_missing_imports = true

pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
